[project]
name = "richuru"
version = "0.1.1"
description = "a bridge between loguru & rich, rich's powerful render in loguru!"
authors = [
    {name = "GreyElaina", email = "GreyElaina@outlook.com"},
]
dependencies = [
    "loguru>=0.6.0",
    "rich>=12.4.4",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
